--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -77,13 +77,15 @@ cite span { color: #fff; }
 	width: 109px;
 	height: 30px;
 	padding: 4px 0 0 0;
-	background: #ff4dc4;
+	margin:0;
+	background: #00B2EE;
 	color: #ccc;
 	font-weight: bold;
-	font-size: 11px;
+	font-size: 12px;
 	text-align: center;
 	text-decoration: none;
 }
+
 
 .button a:hover {
 	color: #fff;
@@ -107,7 +109,7 @@ ul li {
 margin-left:-30px;
 	width: 100%;
 	height: 56px;
-            background-color:rgba(0,0,0,0.4);
+            background-color:rgba(0,0,0,0.6);
 z-index:10;
  margin-top:-20px;	
 }
@@ -124,7 +126,7 @@ color: #ff4dc4;
 	padding: 0;
 	
 	float:right;
-z-index:10;
+        z-index:10;
 	
 }
 
@@ -155,13 +157,19 @@ z-index:10;
 	font-weight: normal;
 	outline: none;
 }
+#templatemo_menu li .current {
+ background-color:rgba(255,77,196,1.0);
 
-#templatemo_menu li a:hover, #templatemo_menu li .current{
+}
+#templatemo_menu li a:hover {
 	 color: #fff;
-	 background-color:rgba(255,77,196,0.7);
+	background:#00B2EE;
        
 }
 
+.bluep {
+color:#00B2EE;
+}
 
 #standout {
 color:#00688B;
@@ -178,7 +186,7 @@ text-shadow: none;
 	height: 700px;
         background: #fff;
 	border-bottom: 1px solid #000;
-margin-top:0px;
+       margin-top:0px;
 }
 
 #templatemo_header {
@@ -197,17 +205,32 @@ margin-top:0px;
 
 #templatemo_header  #site_title {
 	float: left;
+	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:85px;
-         background-color:rgba(77,196,255,0.6);
+         background-color:#00FF00;
 }
 
 #templatemo_header  #site_title h1 {color:#fff;
 	margin: 0;
 	padding: 0;
-text-shadow: 2px 4px 3px rgba(0,0,0,0.4);
+        text-shadow: 2px 4px 3px rgba(0,0,0,0.7);
 }
 
+#templatemo_header  .site_marketing {
+	float: left;
+	clear:both;
+	padding: 20px 20px 20px 20px;
+	margin-top:20px;
+        background-color:#00B2EE;
+}
+
+#templatemo_header  .site_marketing h1 {color:#fff;
+	margin: 0;
+	font-size:18px;
+	padding: 0;
+        text-shadow: 2px 4px 3px rgba(0,0,0,1);
+}
 #templatemo_header  #site_title h1 a{
 	margin: 0px;
 	padding: 0px;
@@ -241,10 +264,11 @@ text-shadow: 2px 4px 3px rgba(0,0,0,0.4);
 
 
 .bluetitle {
-color:#fff;
+color:#00FF00;
+}
 font-family: 'Open Sans', sans-serif;
 font-size:19px;
-background:#000;
+background:#fff;
 padding:2px 4px 2px 4px;
 }
 
@@ -270,7 +294,7 @@ padding:2px 4px 2px 4px;
 	padding: 10px;
 	margin-top:-90px;
 	margin-right:22px;
-	 background-color:rgba(255,255,255,0.5);
+	 background-color:rgba(255,255,255);
 
 }
 
@@ -282,7 +306,7 @@ height:200px;
 }
 
 #templatemo_top_row .last {
-	background-color:rgba(255,255,255,0.5);
+	background-color:rgba(255,255,255);
 }
 
 #templatemo_top_row p {
