--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -175,7 +175,7 @@ color:#00B2EE;
 color:#6bff4d;
 }
 .standout2 {
-color:#6bff4d;
+color:#00B2EE;
 
 }
 
@@ -211,6 +211,7 @@ margin-top:0px;
 	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:75px;
+	margin-left:50px;
          background-color:#00B2EE;
 }
 
@@ -218,7 +219,7 @@ margin-top:0px;
 font-size:25px;
 	margin: 0;
 	padding: 0;
-        text-shadow: 2px 2px 3px rgba(0,0,0,0.7);
+        text-shadow: 2px 2px 3px rgba(0,0,0,1);
 }
 
 #templatemo_header  .site_marketing_first {
@@ -227,7 +228,7 @@ font-size:25px;
 	padding: 20px 20px 20px 20px;
 	margin-top:-57px;
 	margin-right:100px;
-background-color:rgba(255,77,196,1);
+background-color:rgba(0,0,0,1);
       
 }
 
@@ -260,7 +261,7 @@ background-color:rgba(255,77,196,1);
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:100px;
-          background:#00B2EE;
+          background:#000;
 }
 
 #templatemo_header  #site_marketing3 h1 {color:#fff;
