--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -108,8 +108,8 @@ ul li {
 #templatemo_menu_wrapper {
 margin-left:-30px;
 	width: 100%;
-	height: 56px;
-            background-color:rgba(0,0,0,0.6);
+	height: 60px;
+            background-color:rgba(0,0,0,0.8);
 z-index:10;
  margin-top:-20px;	
 }
@@ -119,12 +119,16 @@ color: #ff4dc4;
 
 }
 
+.firststand {
+color:#00FF00;
+}
+
 #templatemo_menu {
 	width: 900px;
-	height: 60px;
-	margin-right: -100px;
+	height: 62px;
+	margin-right: -130px;
 	padding: 0;
-	
+	margin-top:-53px;
 	float:right;
         z-index:10;
 	
@@ -145,9 +149,8 @@ color: #ff4dc4;
 #templatemo_menu ul li a{
 	float: left;
 	display: block;
-	width: 124px;
+	width: 118px;
 	height: 42px;
-       
 	padding: 19px 0 0 0;
 	margin-right: 1px;
 	text-align: center;
@@ -168,14 +171,14 @@ color: #ff4dc4;
 }
 
 .bluep {
-color:#00B2EE;
+color:#00FF00;
 }
 
 #standout {
 color:#6bff4d;
 }
 .standout2 {
-color:#00B2EE;
+color:#6bff4d;
 
 }
 
@@ -189,8 +192,38 @@ color:#00B2EE;
 	height: 700px;
         background: #fff;
 	border-bottom: 1px solid #000;
-       margin-top:0px;
+       margin-top:25px;
 }
+
+a.paynow {
+font-size:11px;
+float:right;
+margin-right:49px;
+padding-top:1px;
+color:#00FF00;
+text-decoration:none;
+}
+a.paynow:hover {
+font-size:11px;
+float:right;
+margin-right:49px;
+padding-top:1px;
+color:#fff;
+text-decoration:none;
+}
+p.paynow {
+font-size:11px;
+float:right;
+margin-right:245px;
+padding-top:2px;
+color:#00B2EE;
+text-decoration:none;
+}
+
+.greencall {
+color:#00FF00;
+}
+
 
 #templatemo_header {
 z-index:0;
@@ -228,7 +261,7 @@ font-size:25px;
 	padding: 20px 20px 20px 20px;
 	margin-top:-57px;
 	margin-right:100px;
-background-color:rgba(0,0,0,1);
+background-color:rgba(255,77,196,.8);
       
 }
 
@@ -261,7 +294,7 @@ background-color:rgba(0,0,0,1);
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
 	margin-right:100px;
-          background:#000;
+          background:#00B2EE;
 }
 
 #templatemo_header  #site_marketing3 h1 {color:#fff;
@@ -295,7 +328,13 @@ background-color:rgba(0,0,0,1);
 	text-decoration: none;
 }
 
+#companylogo {
+width:390px;
+margin-left:50px;
+margin-top:9px;
 
+
+}
 
 /* end of header */
 
@@ -303,11 +342,11 @@ background-color:rgba(0,0,0,1);
 
 
 .bluetitle {
-color:#00FF00;
-}
+color:#00B2EE;
+line-height:130%;
 font-family: 'Open Sans', sans-serif;
-font-size:19px;
-background:#fff;
+font-size:17px;
+background:none;
 padding:2px 4px 2px 4px;
 }
 
@@ -329,7 +368,7 @@ padding:2px 4px 2px 4px;
 	overflow: hidden;
 	float: left;
 	width: 300px;
-	height: 400px;
+	height: 450px;
 	padding: 0;
 	margin-top:-90px;
 	margin-right:22px;
