--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -71,23 +71,25 @@ blockquote { font-style: italic; }
 cite { font-weight: bold; }
 cite span { color: #fff; }
 
-.button a {
+a.button  {
 	clear: both;
 	display: block;
 	width: 109px;
 	height: 30px;
-	padding: 4px 0 0 0;
+	padding: 10px 0 0 0;
 	margin:0;
+	margin-top:4px;
 	background: #00B2EE;
 	color: #ccc;
 	font-weight: bold;
 	font-size: 12px;
 	text-align: center;
 	text-decoration: none;
+ text-shadow: 1px 1px 2px rgba(0,0,0,1);
 }
 
 
-.button a:hover {
+a.button:hover {
 	color: #fff;
 	background:#00FF00;
 }
@@ -107,16 +109,18 @@ ul li {
 
 #templatemo_menu_wrapper {
 margin-left:-30px;
-	width: 100%;
-	height: 60px;
-            background-color:rgba(0,0,0,0.8);
+width: 100%;
+height: 60px;
+background-color:rgba(0,0,0,0.75);
 z-index:10;
  margin-top:-20px;	
 }
 
-.turqp {
-color: #ff4dc4;
 
+
+.turqp {
+color: #FFCC00;
+font-size:15px;
 }
 
 .firststand {
@@ -154,7 +158,7 @@ color:#00FF00;
 	padding: 19px 0 0 0;
 	margin-right: 1px;
 	text-align: center;
-	font-size: 16px;
+	font-size: 15px;
 	text-decoration: none;
 	color: #fff;	
 	font-weight: normal;
@@ -171,7 +175,7 @@ color:#00FF00;
 }
 
 .bluep {
-color:#00FF00;
+color:#FFCC00;
 }
 
 #standout {
@@ -200,7 +204,7 @@ font-size:11px;
 float:right;
 margin-right:49px;
 padding-top:1px;
-color:#00FF00;
+color:#fff;background-color:rgba(255,77,196,1);
 text-decoration:none;
 padding:4px;
 }
@@ -211,7 +215,7 @@ margin-right:49px;
 padding-top:1px;
 color:#fff;
 padding:4px;
-background-color:rgba(255,77,196,1);
+
 text-decoration:none;
 }
 p.paynow {
@@ -344,14 +348,13 @@ margin-top:9px;
 
 /* top row */
 
-
 .bluetitle {
 color:#00B2EE;
 line-height:130%;
 font-family: 'Open Sans', sans-serif;
 font-size:17px;
 background:none;
-padding:2px 4px 2px 4px;
+padding:2px 2px 2px 0px;
 }
 
 #templatemo_top_row_wrapper {
@@ -372,11 +375,11 @@ padding:2px 4px 2px 4px;
 	overflow: hidden;
 	float: left;
 	width: 300px;
-	height: 450px;
+	height: 422px;
 	padding: 0;
 	margin-top:-90px;
 	margin-right:22px;
-	 background-color:#DCDCDC;
+	background-color:#DCDCDC;
 
 }
 
@@ -410,20 +413,23 @@ height:200px;
 #templatemo_content_wrapper {
 	clear: both;
 	width: 100%;
-background:#000;
+        background:#000;
 	border-bottom: 1px solid #282829;	
 }
 
 #templatemo_content {
-	width: 930px;
+	width: 1030px;
 	padding: 60px 30px;
 	margin: 0 auto;
 background:#000;
-
 }
 
+
+
 #templatemo_content h1 {
-	font-size:22px;
+font-size:24px;
+margin-bottom:11px;
+font-family: 'Open Sans', sans-serif;
 
 }
 #templatemo_content p{
@@ -663,10 +669,19 @@ background:#000;
 	margin: 0 auto;
 	padding: 15px 20px;
 	text-align: center;
-	color: #6e6965;
+	color: #fff;
 }
 
 #templatemo_copyright a {
-	color: #6e6965;
+	color: #fff;
+text-decoration:none;
+ color:rgba(255,77,196,1);
+}
+
+h1.marketing_header {
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+color:#00B2EE;
+font-size:40px;
 }
 /* end of copyright */
