--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -198,7 +198,7 @@ font-style:italic;
 	height: 700px;
         background: #fff;
 	border-bottom: 1px solid #000;
-       margin-top:25px;
+        margin-top:25px;
 }
 
 
@@ -264,8 +264,6 @@ margin-top:0px;
 	margin: 0 auto;
 	background: url(../images/ys.jpg) no-repeat;
         background-size:cover;
-
-
 }
 
 #templatemo_header3 {
@@ -281,6 +279,42 @@ margin-top:0px;
 
 
 }
+#templatemo_header4 {
+z-index:0;
+margin-top:0px;
+	
+	width: 100%;
+	height: 400px;
+	padding: 20px 30px;
+	margin: 0 auto;
+	background: url(../images/ch1.jpg) no-repeat;
+        background-size:cover;
+}
+
+#templatemo_header5 {
+z-index:0;
+margin-top:0px;
+	
+	width: 100%;
+	height: 400px;
+	padding: 20px 30px;
+	margin: 0 auto;
+	background: url(../images/couples.jpg) no-repeat;
+        background-size:cover;
+}
+
+#templatemo_header6 {
+z-index:0;
+margin-top:0px;
+	
+	width: 100%;
+	height: 400px;
+	padding: 20px 30px;
+	margin: 0 auto;
+	background: url(../images/boty.jpg) no-repeat;
+        background-size:cover;
+}
+
 
 #templatemo_header  #site_title {
 	float: left;
@@ -484,10 +518,11 @@ background:#000;
 
 
 #templatemo_content h1 {
-font-size:24px;
+font-size:22px;
 margin-top:11px;
 margin-bottom:11px;
 font-family: 'Open Sans', sans-serif;
+color:#00B2EE
 
 }
 #templatemo_content p{
@@ -514,6 +549,12 @@ font-family: 'Open Sans', sans-serif;
 .services_section h3 {
 	margin-bottom: 20px;
 	margin-left:644px;
+color:#00B2EE;
+}
+ .righttitle2 {margin-top:-17px;
+	margin-bottom: 20px;
+	margin-left:0px;
+color:#00B2EE;
 }
 
 .services_section .left {
@@ -750,6 +791,6 @@ h1.marketing_header {
 font-family: 'Open Sans', sans-serif;
 font-weight:lighter;
 color:#00B2EE;
-font-size:40px;
+font-size:25px;
 }
 /* end of copyright */
