--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -303,12 +303,20 @@ margin-top:0px;
         background-size:cover;
 }
 
+.templatemo_header_wrapper6 {
+	width: 100%;
+	height: 62px;
+        background: #fff;
+	border-bottom: 1px solid #000;
+       margin-top:25px;
+}
+
 #templatemo_header6 {
 z-index:0;
 margin-top:0px;
 	
 	width: 100%;
-	height: 400px;
+	height: 62px;
 	padding: 20px 30px;
 	margin: 0 auto;
 	background: url(../images/boty.jpg) no-repeat;
@@ -522,7 +530,7 @@ font-size:22px;
 margin-top:11px;
 margin-bottom:11px;
 font-family: 'Open Sans', sans-serif;
-color:#00B2EE
+color:#00B2EE;
 
 }
 #templatemo_content p{
@@ -548,7 +556,7 @@ color:#00B2EE
 
 .services_section h3 {
 	margin-bottom: 20px;
-	margin-left:644px;
+	margin-left:20px;
 color:#00B2EE;
 }
  .righttitle2 {margin-top:-17px;
@@ -682,7 +690,7 @@ margin-top:18px;
 	height: 18px;
 	width: 260px;
 	background: #222222;
-	border: 1px solid #666666;
+	border: 1px solid #00B2EE;
 	color: #CCCCCC;
 	padding: 4px;
 }
@@ -698,7 +706,7 @@ margin-top:18px;
 	width: 350px;
 	height: 150px;
 	background: #222222;
-	border: 1px solid #666666;
+	border: 1px solid #00B2EE;
 	color: #CCCCCC;
 	padding: 4px;
 }
