--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -111,7 +111,7 @@ ul li {
 margin-left:-30px;
 width: 100%;
 height: 60px;
-background-color:rgba(0,0,0,0.5);
+background-color:rgba(0,0,0,0.4);
 z-index:10;
  margin-top:-20px;	
 }
@@ -176,7 +176,7 @@ color:#00FF00;
 }
 
 .bluep {
-color:#FFCC00;
+color:#FF6103;
 }
 
 #standout {
@@ -224,12 +224,12 @@ font-size:11px;
 float:right;
 margin-right:245px;
 padding-top:2px;
-color:#00B2EE;
+color:#00FF00;
 text-decoration:none;
 }
 
 .greencall {
-color:#00FF00;
+color:#00B2EE;
 }
 
 
@@ -522,20 +522,26 @@ height:200px;
 	clear: both;
 	width: 100%;
         background:#000;
-	border-bottom: 1px solid #282829;	
+	border-bottom: 1px solid #282829;
+	
 }
 #templatemo_content_wrapper2 {
 margin-top:0;
 	clear: both;
 	width: 100%;
         background:#000;
-	border-bottom: 1px solid #282829;	
+	border-bottom: 1px solid #282829;
+z-index:10;	
+position:absolute;
 }
 #templatemo_content {
 	width: 1030px;
 	padding: 60px 30px;
 	margin: 0 auto;
-background:#000;
+background-color:rgba(0,0,0,0.8);
+position:relative;
+z-index:10;
+margin-top:0px;
 }
 
 
@@ -550,6 +556,15 @@ color:#00B2EE;
 }
 #templatemo_content p{
 	color:#fff;
+font-family: 'Open Sans', sans-serif;
+font-size:14px;
+}
+
+#about_background {
+-webkit-filter: grayscale(100%);
+-webkit-filter: contrast(190%);
+z-index:0;
+width:100%;
 }
 
 
