--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1,6 +1,9 @@
 /*
 CSS Credit: http://www.templatemo.com/
 */
+/* copyright */
+
+
 
 body {
 	margin:0px;
@@ -235,6 +238,7 @@ margin-top:0px;
 	height: 62px;
         background-size:cover;
 
+
 }
 #templatemo_header2 {
 z-index:0;
@@ -386,7 +390,17 @@ background-color:none);
 position:relative;
 z-index:10;
 margin-top:-675px;
-width: 98%;
+width: 1323px;
+}
+#templatemo_content {
+z-index:100;
+padding: 60px 30px;
+margin: 0 auto;
+background-color:rgba(0,0,0,0.8);
+position:relative;
+z-index:10;
+margin-top:-660px;
+width: 1165px;
 }
 
 #templatemo_content1  .site_marketing_first {
@@ -521,7 +535,7 @@ background-color: #000;
 padding:10px;
 width:280px;
 height:200px;
-
+background:#fff;
 }
 
 #templatemo_top_row .last {
@@ -578,16 +592,18 @@ margin-top:0px;
 #templatemo_content8{
 border-top: 1px solid green;
 	width: 100%;
-
+height:150px;
 	padding: 60px 30px;
 	margin: 0 auto;
 background-color:rgba(0,0,0,0.8);
 position:relative;
 z-index:0;
-margin-top:980px;
+margin-top:990px;
 }
 
-
+.whitedes {
+color:#fff;
+}
 
 
 #templatemo_content8 h1 {
@@ -599,23 +615,48 @@ color:#00B2EE;
 
 }
 #templatemo_content p{
-	color:#fff;
+color:#fff;
 font-family: 'Open Sans', sans-serif;
 font-size:14px;
+
 }
+#top_photo {
+
+width:200px;
+height:150px;
+}
+
+#righty {
+float:right;
+width:575px;
+}
+#lefty {
+float:left;
+width:575px;
+}
+
+
+
 
 #about_background {
 -webkit-filter: grayscale(100%);
 -webkit-filter: contrast(190%);
 z-index:0;
-width:100%;
+width:100px;
 }
 #about_background2 {
--webkit-filter: grayscale(100%);
+
 -webkit-filter: contrast(190%);
 z-index:0;
-width:100%;
+width:1351px;
 }
+#about_background3 {
+-webkit-filter: contrast(190%);
+
+z-index:0;
+width:1351px;
+}
+
 
 
 .two_column {
@@ -845,19 +886,24 @@ margin-top:0px;
 	color: #fff;
 }
 
+h1.marketing_header {
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+color:#00B2EE;}
+
 #templatemo_footer img{
 	padding: 10px;
 	background: #fff;
 	border: 1px solid #34322f;
 	margin-bottom: 10px;
 }
-
 /* end of footer */
 
-/* copyright */
 
+/* end of copyright */
 #templatemo_copyright_wrapper {
 	width: 100%;
+      
 	background: #000000;
 	border-top: 1px solid #262626;
 }
@@ -865,6 +911,7 @@ margin-top:0px;
 #templatemo_copyright {
 	width: 960px;
 	margin: 0 auto;
+
 	padding: 15px 20px;
 	text-align: center;
 	color: #fff;
@@ -874,12 +921,5 @@ margin-top:0px;
 	color: #fff;
 text-decoration:none;
  color:rgba(255,77,196,1);
-}
 
-h1.marketing_header {
-font-family: 'Open Sans', sans-serif;
-font-weight:lighter;
-color:#00B2EE;
-font-size:25px;
 }
-/* end of copyright */
