--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -389,7 +389,7 @@ margin: 0 auto;
 background-color:none);
 position:relative;
 z-index:10;
-margin-top:-675px;
+margin-top:-662px;
 width: 1323px;
 }
 #templatemo_content {
@@ -586,7 +586,7 @@ height:150px;
 padding: 60px 30px;
 position:relative;
 z-index:0;
-margin-top:0px;
+margin-top:-28px;
 }
 
 #templatemo_content8{
@@ -598,7 +598,7 @@ height:150px;
 background-color:rgba(0,0,0,0.8);
 position:relative;
 z-index:0;
-margin-top:990px;
+margin-top:1000px;
 }
 
 .whitedes {
@@ -836,7 +836,7 @@ margin-top:18px;
 	margin-right: 80px;
 	padding: 5px 10px;
 	background: #222222;
-	border: 1px solid #666666;
+	border: 1px solid #FF69B4;
 	color: #CCCCCC;
 }
 
