--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -114,7 +114,7 @@ ul li {
 margin-left:-30px;
 width: 100%;
 height: 61px;
-background-color:rgba(0,0,0,0.2);
+background-color:rgba(0,0,0,0.5);
 z-index:10;
  margin-top:-20px;	
 }
@@ -140,6 +140,7 @@ color:#00FF00;
 	margin-top:-53px;
 	float:right;
         z-index:10;
+
 	
 }
 
@@ -170,7 +171,7 @@ color:#00FF00;
 	outline: none;
 }
 #templatemo_menu li .current {background:#00B2EE;
-
+color: #fff;
 
 }
 #templatemo_menu li a:hover {
@@ -180,7 +181,7 @@ color:#00FF00;
 }
 
 .bluep {
-color:#FF6103;
+color:#FFCC00;
 }
 
 #standout {
@@ -399,7 +400,7 @@ margin: 0 auto;
 background-color:rgba(0,0,0,0.8);
 position:relative;
 z-index:10;
-margin-top:-660px;
+margin-top:-680px;
 width: 1165px;
 }
 
@@ -500,16 +501,37 @@ margin-top:510px;
 	clear: both;
 	width: 100%;
 	height: 170px;
-	background-color:none; 
-	border-bottom: 1px solid #000;
+	 background:#000;
+	z-index:100;
 height: 300px;
 }
 
+#blurpix {
+        width: 944px;
+	height: 33px;
+	z-index: 0;
+	position: absolute;
+	left:207px;
+	margin-top:-20px;
+	
+background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+    background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+    background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+    background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+
+
+}
+
 #templatemo_top_row {
-	width: 980px;
+	width:970px;
+height:200px;
 	margin: 0 auto;
-	padding: 0 25px;
-background:#000;
+	padding:0;
+background:none;
+z-index: 100;
+position:relative;
 }
 
 #templatemo_top_row .top_row_box {
@@ -520,7 +542,7 @@ background:#000;
 	padding: 0;
 	margin-right:22px;
 	background-color:#DCDCDC;
-
+z-index: 100;
 }
 
 .blackbox {
@@ -595,7 +617,7 @@ border-top: 1px solid green;
 height:150px;
 	padding: 60px 30px;
 	margin: 0 auto;
-background-color:rgba(0,0,0,0.8);
+background-color:#090909;
 position:relative;
 z-index:0;
 margin-top:1000px;
@@ -646,7 +668,7 @@ width:100px;
 }
 #about_background2 {
 
--webkit-filter: contrast(190%);
+-webkit-filter: contrast(160%);
 z-index:0;
 width:1351px;
 }
@@ -848,7 +870,7 @@ margin-top:18px;
 #templatemo_footer_wrapper {
 	clear: both;
 	width: 100%;
-	background: #090909;
+	background: #000;
 	border-top: 1px solid #000;	
 	border-bottom: 1px solid #000;
 }
@@ -889,7 +911,12 @@ margin-top:0px;
 h1.marketing_header {
 font-family: 'Open Sans', sans-serif;
 font-weight:lighter;
-color:#00B2EE;}
+font-size:22px;
+padding-left:8px;
+color:#00B2EE;
+background:#111;
+margin-bottom:12px;
+width:144px;}
 
 #templatemo_footer img{
 	padding: 10px;
