--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -647,7 +647,18 @@ margin-top:10px;
 #welcome {
 width:1140px;
 margin-left:-50px;
-height:122px;
+height:75px;
+padding: 60px 30px;
+background: url(../images/12.jpg) no-repeat;
+position:relative;
+z-index:0;
+margin-top:-28px;
+}
+
+#surfrincon {
+width:1140px;
+margin-left:-50px;
+height:75px;
 padding: 60px 30px;
 background: url(../images/12.jpg) no-repeat;
 position:relative;
@@ -695,6 +706,19 @@ position:relative;
 z-index:0;
 margin-top:1000px;
 }
+
+#content_filler{
+border-top: 1px solid green;
+	width: 1100px;
+height:150px;
+	padding: 60px 30px;
+	margin:0 auto;
+background-color:#000;
+position:relative;
+z-index:0;
+margin-top:1000px;
+}
+
 
 #templatemo_content9{
 
@@ -781,13 +805,13 @@ width:1351px;
 }
 
 .pricedes{
-font-size:17px;
+font-size:15px;
 margin-top:-4px;
 color:#00FF00;
 
 }
 .priceshow{
-font-size:16px;
+font-size:14px;
 margin-top:5px;
 color:#00B2EE;
 
@@ -1112,6 +1136,22 @@ background:#222;
 margin-bottom:12px;
 width:100px;}
 
+.contacttitle {
+
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+font-size:19px;
+padding-left:8px;
+color:#00FF00;
+background:#222;
+margin-bottom:12px;
+width:400px;
+
+}
+
+.contactp, .enjoyp {
+color:#00B2EE;
+}
 .marketing_header11 {
 font-family: 'Open Sans', sans-serif;
 font-weight:lighter;
