--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -285,8 +285,8 @@ img.mfp-img {
 .mfp-title {
   text-align: left;
   line-height: 18px;
-  color: #00FF00;
-font-weight:bold;
+  color: #BF5FFF;
+
   word-wrap: break-word;
   padding-right: 36px; }
 
