--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -95,6 +95,19 @@ a.button  {
 a.button:hover {
 	color: #fff;
 	background:#00B2EE;
+clear: both;
+	display: block;
+	width: 109px;
+	height: 30px;
+	padding: 10px 0 0 0;
+	margin:0;
+	margin-top:4px;
+	
+	font-weight: bold;
+	font-size: 12px;
+	text-align: center;
+	text-decoration: none;
+ text-shadow: 1px 1px 2px rgba(0,0,0,1);
 }
 
 .infolinks {
@@ -222,7 +235,7 @@ color: #fff;
 }
 
 .bluep {
-color:#FFCC00;
+color:#BF5FFF;
 }
 
 #standout {
@@ -526,7 +539,7 @@ background-color:rgba(255,77,196,.8);
 #templatemo_content1  #site_marketing3 {
 	float: right;
 	clear:both;
-	padding: 20px 20px 20px 20px;
+	
 	margin-top:28px;
 	margin-right:100px;
           background:#00FF00;
@@ -925,9 +938,9 @@ color:#00B2EE;
 #test1 {
 text-indent:11px;
 margin-bottom:70px;
-width:940px;
+width:700px;
 margin-top:-10px;
-margin-left:77px;
+margin-left:177px;
 }
 
 .two_column {
@@ -1211,10 +1224,18 @@ margin-left:12px;
 	border-bottom: 1px solid #000;
 }
 
+
 .fb-like-box {
 margin-top:50px;
-margin-left:300px;
+margin-left:150px;
+float:left;
 }
+#yelpwidget {
+margin-top:120px;
+margin-left:70px;
+float:left;
+}
+
 
 #templatemo_footer {
 	width: 930px;
