--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1226,13 +1226,14 @@ margin-left:12px;
 
 
 .fb-like-box {
+position:relative;
 margin-top:45px;
-margin-left:55px;
+margin-left:-55px;
 float:left;
 }
-#yelpwidget {
+#yelpwidget {position:relative;
 margin-top:120px;
-margin-left:70px;
+margin-left:60px;
 float:left;
 }
 
@@ -1248,10 +1249,11 @@ float:left;
 
 #templatemo_footer_wrapper #templatemo_footer #egospace{
 background-color:#1A1A1A;
-width:745px;
+width:655px;
 height:365px;
 margin:0 auto;
 margin-top:44px;
+
 }
 
 .footer_box {
