--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -178,7 +178,7 @@ color: #00B2EE;
 }
 
 .greenp {
-color: #00FF00;
+color: #BF5FFF;
 }
 
 
@@ -816,13 +816,13 @@ margin-top:3600px;
 #content_filler66{
 border-top: 1px solid green;
 	width: 1100px;
-height:150px;
+height:1300px;
 	padding: 60px 30px;
 	margin:0 auto;
 background-color:#000;
 position:relative;
 z-index:0;
-margin-top:1040px;
+margin-top:300px;
 }
 
 #cleanme {
@@ -1228,7 +1228,7 @@ margin-left:12px;
 .fb-like-box {
 position:relative;
 margin-top:45px;
-margin-left:-55px;
+margin-left:5px;
 float:left;
 }
 #yelpwidget {position:relative;
@@ -1237,6 +1237,8 @@ margin-left:60px;
 float:left;
 }
 
+#yelpwidget a{text-decoration:none;
+}
 
 
 #templatemo_footer {
@@ -1248,8 +1250,9 @@ float:left;
 
 
 #templatemo_footer_wrapper #templatemo_footer #egospace{
-background-color:#1A1A1A;
-width:655px;
+background-color:#000;
+width:850px;
+padding:0;
 height:365px;
 margin:0 auto;
 margin-top:44px;
@@ -1355,7 +1358,7 @@ font-weight:lighter;
 font-size:19px;
 padding-left:8px;
 color:#00FF00;
-background:#000;
+background:#111;
 margin-top:-188px;
 margin-bottom:12px;
 width:144px;
