--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -155,7 +155,7 @@ text-indent:5px;
 color:#fff;
 padding:15px;
 left:0;
-font-size:14px;
+font-size:13px;
 line-height:144%;
 }
 
@@ -447,6 +447,8 @@ z-index:10;
 margin-top:-662px;
 width: 1323px;
 }
+
+
 #templatemo_content {
 z-index:100;
 padding: 60px 30px;
@@ -456,7 +458,10 @@ position:relative;
 z-index:10;
 margin-top:-640px;
 width: 1080px;
+height:1000px;
 }
+
+/* Gallery Content */
 
 #templatemo_content69 {
 z-index:100;
@@ -484,8 +489,9 @@ margin: 0 auto;
 background-color:rgba(0,0,0,0.8);
 position:relative;
 z-index:10;
-margin-top:-640px;
+margin-top:-620px;
 width: 1180px;
+height:500px;
 }
 
 #templatemo_content1  .site_marketing_first {
@@ -562,10 +568,16 @@ background-color:rgba(255,77,196,.8);
 }
 
 #companylogo {
-width:390px;
+width:400px;
 margin-left:50px;
 margin-top:9px;
 }
+
+#part4 { display:inline-block; margin-right0px;margin-top:0px; margin-bottom:10px; margin-right:20px; float:left; width: 146px;
+    height: 146px;
+    -moz-border-radius: 50%; 
+    -webkit-border-radius: 50%; 
+    border-radius: 50%; background-image:url(/images/piked.jpg);background-size:cover;background-position: left 0px top 0px;}
 
 /* end of header */
 
@@ -706,6 +718,7 @@ position:absolute;
 #templatemo_content7 {
 
 	width: 1030px;
+height:725px;
 	padding: 60px 30px;
 	margin: 0 auto;
 background-color:rgba(0,0,0,0.8);
@@ -714,6 +727,7 @@ z-index:10;
 margin-top:10px;
 margin-left:250px;
 }
+
 
 #surfrincon {
 width:1140px;
@@ -800,6 +814,18 @@ position:relative;
 z-index:0;
 margin-top:1300px;
 }
+
+#content_filler33{
+border-top: 1px solid green;
+	width: 1100px;
+height:150px;
+	padding: 60px 30px;
+	margin:0 auto;
+background-color:#000;
+position:relative;
+z-index:0;
+margin-top:855px;
+}
 #content_filler9{
 border-top: 1px solid green;
 	width: 1100px;
@@ -825,13 +851,25 @@ z-index:0;
 margin-top:300px;
 }
 
+#content_filler720{
+border-top: 1px solid green;
+	width: 1100px;
+height:300px;
+	padding: 60px 30px;
+	margin:0 auto;
+background-color:#000;
+position:relative;
+z-index:0;
+margin-top:1350px;
+}
+
 #cleanme {
 height:270px;
 
 }
 
 #cleanme2 {
-height:1000px;
+height:150px;
 
 }
 
@@ -951,7 +989,7 @@ margin-left:177px;
 margin-top:12px;
 margin-left:250px;
 width: 400px;
-height:330px;
+height:300px;
 }
 .includes {
 color:#fff;
@@ -961,7 +999,7 @@ color:#fff;
 margin-top:12px;
 margin-left:30px;
 width: 400px;
-height:330px;
+height:300px;
 }
 .services_section {
 	clear: both;
@@ -1251,7 +1289,7 @@ float:left;
 
 #templatemo_footer_wrapper #templatemo_footer #egospace{
 background-color:#000;
-width:850px;
+width:700px;
 padding:0;
 height:365px;
 margin:0 auto;
@@ -1359,9 +1397,9 @@ font-size:19px;
 padding-left:8px;
 color:#00FF00;
 background:#111;
-margin-top:-188px;
-margin-bottom:12px;
-width:144px;
+margin-top:-180px;
+margin-bottom:24px;
+width:138px;
 margin-left:14px;}
 
 .marketing_header7 {
@@ -1405,6 +1443,9 @@ margin-top:-33px;
 width:160px;}
 
 
+
+
+
 h1.marketing_header2 {
 font-family: 'Open Sans', sans-serif;
 font-weight:lighter;
@@ -1442,6 +1483,10 @@ width:250px;}
 	padding: 15px 20px;
 	text-align: center;
 	color: #fff;
+}
+
+.bringp {
+color:#00FF00;
 }
 
 #templatemo_copyright a {
