--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -133,7 +133,7 @@ ul li {
 margin-left:-30px;
 width: 100%;
 height: 61px;
-background-color:rgba(0,0,0,0.2);
+background-color:rgba(0,0,0,0.4);
 z-index:10;
  margin-top:-20px;	
 }
@@ -218,7 +218,7 @@ color:#00FF00;
 	padding: 19px 0 0 0;
 	margin-right: 1px;
 	text-align: center;
-	font-size: 15px;
+	font-size: 14px;
 	text-decoration: none;
 	color: #fff;	
 	font-weight: normal;
@@ -243,8 +243,6 @@ color:#6bff4d;
 }
 .standout2 {
 color:#6bff4d;
-font-style:italic;
-
 }
 
 
@@ -468,7 +466,7 @@ z-index:100;
 padding: 60px 30px;
 margin: 0 auto;
 height:1000px;
-background-color:rgba(0,0,0,0.8);
+background-color:rgba(0,0,0,0.9);
 position:relative;
 z-index:10;
 margin-top:-640px;
@@ -486,7 +484,7 @@ margin-left:60px;
 z-index:100;
 padding: 60px 30px;
 margin: 0 auto;
-background-color:rgba(0,0,0,0.8);
+background-color:rgba(0,0,0,0.9);
 position:relative;
 z-index:10;
 margin-top:-620px;
@@ -657,6 +655,7 @@ background:#fff;
 }
 #imagegroup {
 margin-left:85px;
+margin-top:30px;
 
 }
 .popyimg {
@@ -730,11 +729,13 @@ margin-left:250px;
 
 
 #surfrincon {
-width:1140px;
-margin-left:-50px;
+width:1030px;
+margin-left:0 auto;
 height:75px;
 padding: 60px 30px;
-background: url(../images/smoo1.jpg) no-repeat;
+background: url(../images/Rincon.jpg) no-repeat;
+background-size: 100% 100%;
+background-zoom:
 position:relative;
 z-index:0;
 margin-top:-28px;
@@ -936,14 +937,6 @@ width:1000px;
 
 
 
-
-
-#about_background {
--webkit-filter: grayscale(100%);
--webkit-filter: contrast(190%);
-z-index:0;
-width:100px;
-}
 #about_background2 {
 
 -webkit-filter: contrast(160%);
@@ -952,8 +945,10 @@ width:1351px;
 }
 #about_background3 {
 -webkit-filter: brightness(22%);
-filter:  brightness(22%); -webkit-filter:  brightness(22%); -moz-filter:  brightness(22%);
--o-filter:  brightness(22%); -ms-filter:  brightness(22%);
+filter:  brightness(22%);
+-moz-filter:  brightness(22%);
+-o-filter: brightness(22%); 
+-ms-filter:  brightness(22%);
 z-index:0;
 width:1351px;
 height:645px;
@@ -1255,13 +1250,24 @@ margin-left:12px;
 /* footer */
 
 #templatemo_footer_wrapper {
-	clear: both;
+	
 	width: 1351px;
-	background: #000;margin-top:100px;
+height:400px;
+	background: #000;
+margin-top:100px;
 	border-top: 1px solid #000;	
 	border-bottom: 1px solid #000;
 }
 
+
+#ego_wrapper {
+
+width: 1351px;
+height:400px;
+background: #000;
+margin-top:65px;
+	
+}
 
 .fb-like-box {
 position:relative;
@@ -1281,15 +1287,18 @@ float:left;
 
 #templatemo_footer {
 	width: 930px;
+height:360px;
 	padding: 45px 30px;
 	margin: 0 auto;
 	color: #d8d3bd;
+background:#000;
 }
 
 
-#templatemo_footer_wrapper #templatemo_footer #egospace{
+#egospace{
 background-color:#000;
 width:700px;
+height:400px;
 padding:0;
 height:365px;
 margin:0 auto;
@@ -1417,7 +1426,7 @@ font-family: 'Open Sans', sans-serif;
 font-weight:lighter;
 font-size:19px;
 padding-left:8px;
-color:#00FF00;
+color:#BF5FFF;
 background:#222;
 margin-bottom:12px;
 width:177px;}
