--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1260,13 +1260,16 @@ margin-top:100px;
 }
 
 
-#ego_wrapper {
 
-width: 1351px;
+#egospace{
+background-color:#000;
+width:700px;
 height:400px;
-background: #000;
-margin-top:65px;
-	
+padding:0;
+height:365px;
+margin:0 auto;
+margin-top:10px;
+
 }
 
 .fb-like-box {
@@ -1274,11 +1277,13 @@ position:relative;
 margin-top:45px;
 margin-left:5px;
 float:left;
+z-index:0;
 }
 #yelpwidget {position:relative;
 margin-top:120px;
 margin-left:60px;
 float:left;
+z-index:0;
 }
 
 #yelpwidget a{text-decoration:none;
@@ -1294,17 +1299,6 @@ height:360px;
 background:#000;
 }
 
-
-#egospace{
-background-color:#000;
-width:700px;
-height:400px;
-padding:0;
-height:365px;
-margin:0 auto;
-margin-top:44px;
-
-}
 
 .footer_box {
 	float: left;
