--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -17,7 +17,7 @@ body {
 
 .wrapper { min-width:1330px;margin:0 auto;overflow: hidden; }
 
-a, a:link, a:visited {
+a, a:link, a:visited {site_marketing3
 	color:#c0c0c2;
 }
 
@@ -82,7 +82,7 @@ a.button  {
 	padding: 10px 0 0 0;
 	margin:0;
 	margin-top:4px;
-	background: #00FF00;
+	background: #00B2EE ;
 	color: #ccc;
 	font-weight: bold;
 	font-size: 12px;
@@ -94,7 +94,7 @@ a.button  {
 
 a.button:hover {
 	color: #fff;
-	background:#00B2EE;
+	background:#00FF00;
 clear: both;
 	display: block;
 	width: 109px;
@@ -563,10 +563,10 @@ background-color:#FF0080;
 	padding: 0;
         text-shadow: 2px 2px 2px rgba(0,0,0,1);
 }
-#templatemo_content1  #site_marketing3 {
+#templatemo_content1  #site_marketing3 .button {
 	float: right;
 	clear:both;
-	
+	 text-shadow: 1px 1px 2px rgba(0,0,0,1);
 	margin-top:28px;
 	margin-right:100px;
           background:#00FF00;
@@ -589,7 +589,7 @@ background-color:#FF0080;
 }
 
 #companylogo {
-width:400px;
+width:410px;
 margin-left:50px;
 margin-top:9px;
 }
