--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -3,7 +3,11 @@ CSS Credit: http://www.templatemo.com/
 */
 /* copyright */
 
+html, body {
+    margin: 0;
+    padding: 0;
 
+}
 
 body {
 	margin:0px;
@@ -13,6 +17,7 @@ body {
 	font-size:13px;
 	line-height:1.5em; 
 	background-color: #000;
+
 }
 
 .wrapper { min-width:1330px;margin:0 auto;overflow: hidden; }
@@ -82,7 +87,7 @@ a.button  {
 	padding: 10px 0 0 0;
 	margin:0;
 	margin-top:4px;
-	background: #00B2EE ;
+	background:#00FF00 ;
 	color: #ccc;
 	font-weight: bold;
 	font-size: 12px;
@@ -94,7 +99,7 @@ a.button  {
 
 a.button:hover {
 	color: #fff;
-	background:#00FF00;
+	background:#00B2EE ;
 clear: both;
 	display: block;
 	width: 109px;
@@ -224,14 +229,16 @@ color:#00FF00;
 	text-align: center;
 	font-size: 14px;
 	text-decoration: none;
-	color: #00B2EE;	
+	color: #99e0f8;	
 	font-weight: normal;
 	outline: none;
 }
-#templatemo_menu li .current {background:#FF0080;
-color: #fff;
+#templatemo_menu li .current {background:#00FF00;
+color: #333;
 
 }
+
+
 #templatemo_menu li a:hover {
 	 color: #fff;
 	 background-color:#00B2EE;
@@ -430,12 +437,12 @@ margin-top:0px;
 	
 	margin-top:-10px;
       z-index:100;
-	margin-left:50px;
+	margin-left:77px;
          background-color:#00B2EE;
 }
 
  #templatemo_content1  #site_title h1 {color:#fff;
-font-size:25px;
+        font-size:25px;
 	margin: 0;
 	padding: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,1);
@@ -460,13 +467,15 @@ font-family: 'Open Sans', sans-serif;
 
 #templatemo_content1 {
 z-index:100;
-padding: 60px 30px;
+padding: 60px 0px;
 margin: 0 auto;
-background-color:none);
+background-color:none;
+opacity:2;
 position:relative;
 z-index:10;
 margin-top:-662px;
-width: 1323px;
+width: 1300px;
+height:500px;
 }
 
 
@@ -492,7 +501,7 @@ height:1000px;
 background-color:rgba(0,0,0,0.8);
 position:relative;
 z-index:10;
-margin-top:-640px;
+margin-top:-620px;
 width: 1080px;
 }
 
@@ -520,7 +529,7 @@ height:500px;
 	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:10px;
-	margin-right:100px;
+	margin-right:30px;
 background-color:#FF0080;
       
 }
@@ -537,7 +546,7 @@ background-color:#FF0080;
 	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
-	margin-right:100px;
+	margin-right:60px;
         background-color:#00B2EE;
 }
 
@@ -553,7 +562,7 @@ background-color:#FF0080;
 	clear:both;
 	padding: 20px 20px 20px 20px;
 	margin-top:15px;
-	margin-right:100px;
+	margin-right:44px;
           background:#00B2EE;
 }
 
@@ -566,12 +575,10 @@ background-color:#FF0080;
 #templatemo_content1  #site_marketing3 .button {
 	float: right;
 	clear:both;
-	 text-shadow: 1px 1px 2px rgba(0,0,0,1);
 	margin-top:28px;
-	margin-right:100px;
+	margin-right:74px;
           background:#00FF00;
 }
-
 
 #templatemo_content1  #site_marketing h1 {color:#fff;
 	margin: 0;
@@ -614,8 +621,8 @@ padding:2px 2px 2px 0px;
 }
 
 #templatemo_top_row_wrapper {
-margin-top:510px;
-	clear: both;
+margin-top:540px;
+	
 	width: 100%;
 	height: 170px;
 	 background:#000;
@@ -625,11 +632,12 @@ height: 300px;
 
 #blurpix {
         width: 944px;
-	height: 150px;
+	height: 123px;
 	z-index: 0;
 	position: absolute;
-	left:207px;
-	margin-top:-56px;
+	left:191px;
+z-index:10;
+	margin-top:-80px;
 	-webkit-filter: sepia(100%);
 background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
@@ -812,7 +820,7 @@ height:150px;
 background-color:#000;
 position:relative;
 z-index:0;
-margin-top:1000px;
+margin-top:150px;
 }
 
 #content_filler{
@@ -878,7 +886,7 @@ margin-top:300px;
 #content_filler720{
 border-top: 1px solid green;
 	width: 1100px;
-height:300px;
+height:150px;
 	padding: 60px 30px;
 	margin:0 auto;
 background-color:#000;
@@ -910,9 +918,12 @@ z-index:0;
 margin-top:50px;
 }
 
+.whiteprice {
+color:#fff;
+}
 
 .whitedes {
-color:#fff;
+color:#008aee;
 }
 
 .greendes {
@@ -965,6 +976,7 @@ width:1000px;
 -webkit-filter: contrast(160%);
 z-index:0;
 width:1351px;
+height:645px
 }
 #about_background3 {
 z-index:0;
@@ -991,6 +1003,7 @@ text-indent:11px;
 margin-bottom:70px;
 width:700px;
 margin-top:-10px;
+color:#fff;
 margin-left:177px;
 }
 
@@ -1310,8 +1323,10 @@ background:none;
 margin-left:50px;
 float:left;
 z-index:0;
+
 }
-#yelpwidget {position:relative;
+#yelpwidget {
+
 margin-top:120px;
 width:235px;
 height:150px;
@@ -1456,6 +1471,7 @@ font-weight:lighter;
 font-size:19px;
 padding-left:8px;
 color:#BF5FFF;
+margin-top:-10px;
 background:#000;
 margin-bottom:12px;
 width:177px;}
@@ -1478,7 +1494,7 @@ padding-left:8px;
 color:#00FF00;
 background:#222;
 margin-top:-33px;
-width:160px;}
+width:145px;}
 
 
 
@@ -1494,7 +1510,19 @@ padding-bottom:6px;
 color:#00FF00;
 background:#111;
 margin-bottom:12px;
-width:250px;}
+width:200px;}
+
+h1.marketing_header19 {
+font-family: 'Open Sans', sans-serif;
+font-weight:lighter;
+font-size:19px;
+padding-left:8px;
+padding-top:6px;
+padding-bottom:6px;
+color:#00FF00;
+background:#111;
+margin-bottom:12px;
+width:155px;}
 
 
 #templatemo_footer img{
