--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -22,6 +22,11 @@ body {
 
 .wrapper { min-width:1330px;margin:0 auto;overflow: hidden; }
 
+#toppie {
+float:right;
+
+}
+
 a, a:link, a:visited {site_marketing3
 	color:#c0c0c2;
 }
