--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -143,7 +143,7 @@ ul li {
 margin-left:-30px;
 width: 100%;
 height: 61px;
-background-color:rgba(0,0,0,0.5);
+background-color:rgba(0,0,0,0.3);
 z-index:10;
  margin-top:-20px;	
 }
@@ -239,14 +239,14 @@ color:#00FF00;
 	outline: none;
 }
 #templatemo_menu li .current {background:#00FF00;
-color: #333;
+color: #000;
 
 }
 
 
 #templatemo_menu li a:hover {
 	 color: #fff;
-	 background-color:#00B2EE;
+	 background-color:#FF0080;
        
 }
 
@@ -521,7 +521,7 @@ margin-left:60px;
 z-index:100;
 padding: 60px 30px;
 margin: 0 auto;
-background-color:rgba(0,0,0,0.8);
+background-color:rgba(0,0,0,0.9);
 position:relative;
 z-index:10;
 margin-top:-620px;
